Add JSF, debug Jetty

--- a/examples/jsf/permalink/pom.xml
+++ b/examples/jsf/permalink/pom.xml
@@ -261,6 +261,12 @@
             <!-- (same dependencies as tomcat except for javax.servlet:jstl) -->
 
             <dependency>
+               <groupId>org.mortbay.jetty</groupId>
+               <artifactId>jetty</artifactId>
+               <scope>provided</scope>
+            </dependency>
+
+            <dependency>
                <groupId>javax.annotation</groupId>
                <artifactId>jsr250-api</artifactId>
             </dependency>
