--- a/pom.xml
+++ b/pom.xml
@@ -550,8 +550,7 @@
                         </execution>
                     </executions>
                 </plugin>
-
-                <!-- So m2e doesn't throw errors for features it doesn't support in the 
+                <!-- So m2e doesn't throw errors for features it doesn't support in the
                     POM -->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
@@ -577,7 +576,15 @@
                         </lifecycleMappingMetadata>
                     </configuration>
                 </plugin>
-
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.3.2</version>
+                    <configuration>
+                       <source>1.6</source>
+                       <target>1.6</target>
+                    </configuration>
+                 </plugin>
             </plugins>
 
         </pluginManagement>
@@ -630,7 +637,7 @@
                 <module>tests-arquillian</module>
                 <module>inject-tck-runner</module>
                 <module>jboss-tck-runner</module>
-                <!--<module>environments/osgi/tests</module>-->
+                <module>environments/osgi/tests</module>
             </modules>
         </profile>
         <profile>
